# Neumoython

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
src/app/: __init__.py  about.py  main.py
src/app/styles/: __init__.py  snippets.py  theme.qss  theme_manager.py
src/app/ui/: ui_dialog.ui  ui_error.ui  ui_main.ui
src/app/widgets/: __init__.py  animated_card.py  box_shadow.py  collapsible_section.py  popup_datetime_field.py  progress_widgets.py  registry.py  ripple_button.py  snackbar.py  toggle_switch.py
src/app/widgets/catalog/: __init__.py  buttons_demo.py  cards_demo.py  comboboxes_demo.py  datetime_demo.py  dialogs_demo.py  expanders_demo.py  fields_demo.py  icons_demo.py  inputs_demo.py  lists_demo.py  menus_demo.py  progress_demo.py  sliders_demo.py  snackbars_demo.py  tabs_demo.py  toggles_demo.py
src/app/windows/: __init__.py  main_window.py  showcase.py  widget_showcase.py  window_logic.py
