[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Neumoython"
version = "0.1.0"
description = "Reusable PySide6 widgets with soft neumorphic design"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["pyside6", "qt", "neumorphism", "widgets", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "PySide6>=6.6",
    "qtawesome>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4",
    "hatch",
]

[project.urls]
Homepage   = "https://github.com/tolgayilmaz86/Neumoython"
Repository = "https://github.com/tolgayilmaz86/Neumoython"
Changelog  = "https://github.com/tolgayilmaz86/Neumoython/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/app/widgets", "src/app/styles"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "requirements.txt",
]

[tool.pytest.ini_options]
testpaths   = ["tests"]
qt_api      = "pyside6"
